syntax = "proto3";

option java_package = "net.kyrin.air.hive";
option java_multiple_files = true;

message Register {
    string inetAddress = 1;
    string key = 2;
    string name = 3;
}

message FirstRegister {
    string name = 1;
    string inetAddress = 2;
}

message RegisterAnswer {
    int32 id = 1;
}

message FirstRegisterAnswer {

}

service RegisterService {
    rpc sendFirstRegister (FirstRegister) returns (FirstRegisterAnswer) {}
    rpc sendRegister (Register) returns (RegisterAnswer) {}
}